# Test-Engine

./: CMakeLists.txt  main.cpp
main/: mainFlame.cpp
my_classes/: mesh.h  model.h  shader.h
particles/: Flame.cpp  Flame.h  Flame.hpp  particle_base.hpp
render/: base.hpp  cube.hpp  physics.hpp  quad.hpp  skybox.h  skybox.hpp  sphere.hpp
shader/: cube.fs  cube.vs  plane.fs  plane.vs  sphere.fs
utils/: camera.cpp  camera.h  camera.hpp  libs.hpp  shader.hpp  texture.hpp
